# AI_Goggles

./: .gitignore  CLAUDE.md  CM4_gate_sources_and_FPC_resolution.md  README.md  pyproject.toml  requirements.txt
CM4_IMX415_design_files/: IMX415_CM4_bringup_checklist.md  README_文件索引.md  Radxa_Camera_4K_31pin_pinout.csv  fetch_official_files.sh
ai_context/: BUILD_LOG.txt  bom.csv  cm4_mechanical.json  drc.json  drc.report.txt  erc.json  erc.report.txt  netlist.net  passive_bom_freeze.csv  passive_bom_freeze.json  pin_assignment.csv  pin_assignment.json  pin_verification.csv  radxa_cm4_pinout_v1.20__Sheet1.csv  radxa_cm4_pinout_v1.20__Sheet1.json
config/: b2b_fit_check.yaml  board.yaml  camera_schematic_gate.yaml  cm4_pins.yaml  cm4_v1_pin_assignment.yaml  components_v1.yaml  design_rules.yaml  j2_fh35c_footprint.yaml  passive_bom_freeze.yaml  power_budget.yaml
data/: radxa_cm4_pinout_v1.20.xlsx
docs/: csi3_imx415_audit_2026-06-28.md  design_report_v1_zh.md  imx415_cm4_io_board_bringup.md  j2_fh35c_footprint_check_2026-06-28.md  live_preview_and_dual_recording.md  macos_sd_auto_convert.md  p0_p1_decisions_2026-06-28.md  passive_bom_freeze_2026-06-28.md  shell_design_constraints.md  video_smoothness_benchmark.md
hardware/: AI_Glasses.kicad_sym  ai_glasses_carrier.kicad_pcb  ai_glasses_carrier.kicad_prl  ai_glasses_carrier.kicad_pro  ai_glasses_carrier.kicad_sch  b2b_fit_check.kicad_pro  confirm_fp_1to1_check.kicad_pcb  confirm_fp_1to1_check.kicad_prl  confirm_fp_1to1_check.kicad_pro  fp-lib-table  j2_fh35c_1to1_check.kicad_pcb  j2_fh35c_1to1_check.kicad_prl  (+2 more)
(+182 files in other folders)
